fix skillbar visibility animation bug

--- a/src/components/skill-bar/skill-bar.scss
+++ b/src/components/skill-bar/skill-bar.scss
@@ -30,6 +30,7 @@ div.skill {
     >div {
       float: left;
       height: 100%;
+      width: 0;
       transition: width 1.5s ease-out;
 
       &:after {
